@@ -43,7 +43,7 @@ public class PoliticsText
 	
 	protected PoliticsText()
 	{
-		final ResourceLoader loader = ResourceLoader.getMapresourceLoader(UIContext.getMapDir());
+		final ResourceLoader loader = ResourceLoader.getMapResourceLoader(UIContext.getMapDir());
 		final URL url = loader.getResource(PROPERTY_FILE);
 		if (url == null)
 		{
